--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "date-time": "^2.1.0",
     "request": "^2.88.0",
     "xml-stream": "^0.4.5",
     "xml2js": "^0.4.19"
