--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "xml.js",
+  "start": "node xml.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
